@@ -1,6 +1,11 @@
 2007-03-24  Inge Wallin  <inge@lysator.liu.se>
 
 	Qt3 -> Qt4 conversion.
+	* dialogs/KCWizardDataPage.cc (KCWizardDataPage): Port from
+	Q3ButtonGroup to QGroupBox and QButtonGroup.
+	* dialogs/KCConfigDataPage.cc (KCConfigDataPage): Cleaning
+	
+	Qt3 -> Qt4 conversion.
 	* dialogs/KCConfigDataPage.cc (KCConfigDataPage): Port from
 	Q3ButtonGroup to QGroupBox and QButtonGroup.
 
